--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -23,6 +23,9 @@
     window.imageIcon = "<%= image_url('image_icon.svg') %>";
     window.selectArrow = "<%= image_url('select_arrow.svg') %>";
     window.selectArrowWhite = "<%= image_url('select_arrow_white.svg') %>";
+    window.garbageCanIcon = "<%= image_url('garbage_can_icon.svg') %>";
+    window.googleMapsIcon = "<%= image_url('google_maps_icon.svg') %>";
+    window.googleMapsIconOrange = "<%= image_url('google_maps_icon_orange.png') %>";
 </script>
 
 <% if logged_in? %>
