--- a/app/assets/stylesheets/event_dashboard.scss
+++ b/app/assets/stylesheets/event_dashboard.scss
@@ -251,6 +251,7 @@ $red: 1px red solid;
     span:nth-of-type(1) {
         font-weight: bold;
         padding-bottom: 4px;
+        cursor: pointer;
     }
 }
 
