add images to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,8 +3,8 @@
 <script type="text/javascript">
     window.logo = "<%= image_url('logo_orange.png') %>";
     window.signinIcon = "<%= image_url('signin_icon.svg') %>";
-    window.splashBanner = "<%= image_url('splash_banner.jpg') %>";
     window.splashBanner2 = "<%= image_url('splash_banner_2.jpg') %>";
+    window.splashBannerYoga = "<%= image_url('splash_banner_yoga.jpg') %>";
     window.photoBalloons = "<%= image_url('photo_balloons.jpg') %>";
     window.logoWhiteFull = "<%= image_url('logo_white_full.png') %>";
     window.textIcon = "<%= image_url('text_icon.svg') %>";
@@ -26,6 +26,10 @@
     window.garbageCanIcon = "<%= image_url('garbage_can_icon.svg') %>";
     window.googleMapsIcon = "<%= image_url('google_maps_icon.svg') %>";
     window.googleMapsIconOrange = "<%= image_url('google_maps_icon_orange.png') %>";
+    window.musicIcon = "<%= image_url('music_icon.svg') %>";
+    window.drinkIcon = "<%= image_url('drink_icon.svg') %>";
+    window.businessIcon = "<%= image_url('business_icon.svg') %>";
+    window.theatreIcon = "<%= image_url('theatre_icon.svg') %>";
 </script>
 
 <% if logged_in? %>
