--- a/app/assets/stylesheets/event_dashboard.scss
+++ b/app/assets/stylesheets/event_dashboard.scss
@@ -106,6 +106,7 @@ $red: 1px red solid;
         background: #f8f7fa;
         position: relative;
         display: flex;
+        width: 550px;
 
         img {
             position: absolute;
@@ -271,12 +272,14 @@ $red: 1px red solid;
 
 .dashboard-picture {
     width: 100%;
+    height: 300px;
 }
 
 .details-image-container {
     position: relative;
     left: 58px;
     top: 15px;
+    width: 550px;
 }
 
 .details-image-overlay {
@@ -291,8 +294,8 @@ $red: 1px red solid;
     img {
         background: white;
         position: absolute;
-        top: 140px;
-        left: 260px;
+        top: 110px;
+        left: 245px;
         width: 30px;
         padding: 10px;
         border-radius: 30px;
