--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" 
+      type="image/png" 
+      href="https://aa-file-upload-dev.s3.amazonaws.com/logo_orange.png">
+
     <title>EventNite</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
