--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -28,6 +28,7 @@ $navbar-text: #717388;
     }
     a {
         display: inline-block;
+        cursor: pointer;
     }   
     div:nth-of-type(1) {
         display: flex;
