insert key variable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
 
   <body>
     <%= yield %>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChzMJPuKYv_BNHT1LAei16kDcohpRYX-U&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.google[:api_key] %>&libraries=places"></script>
   </body>
 </html>
