add padding to button-1

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -19,8 +19,7 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 120px;
-    height: 46px;
+    padding: 15px 40px;
     border: 2px #a9a8b3 solid;
     border-radius: 5px;
     background-color: white;
