--- a/app/assets/stylesheets/helper_components.scss
+++ b/app/assets/stylesheets/helper_components.scss
@@ -554,4 +554,20 @@ a.checkbar-selected {
     background: #f8f7fa;
 }
 
+// event card picture
+.event-card-picture-container {
+    position: relative;
+}
+
+.free-tag {
+    position: absolute;
+    background: #FFFFFF;
+    padding: 12px 35px;
+    border-radius: 5px;
+    top: 10px;
+    right: -10px;
+    font-size: 13px;
+    color: #4b4d62;
+}
+
 
