--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -51,6 +51,7 @@
     border-radius: 3px;
     margin-bottom: 2%;
     margin-right: 1.3%;
+    box-shadow: -2px 3px 10px #e6e6e6;
 
     .event-card-picture {
         height: 190px;
