--- a/app/assets/stylesheets/helper_components.scss
+++ b/app/assets/stylesheets/helper_components.scss
@@ -562,6 +562,7 @@ a.checkbar-selected {
 .free-tag {
     position: absolute;
     background: #FFFFFF;
+    box-shadow: -2px 3px 10px #a6a6a6;
     padding: 12px 35px;
     border-radius: 5px;
     top: 10px;
